# origin

./: .gitignore
Abstraction and encapsulation/Task 2 AdressSorting/: Task 2 AdressSorting.sln
Abstraction and encapsulation/Task1 Adresses/: Task1 Adresses.sln
C++ and ORM/: C++ and ORM.sln  C++ and ORM.vcxproj  main.cpp
CMake/Task 2 and a little bit more complicated/: CMakeLists.txt  EquilateralTriangle.cpp  EquilateralTriangle.h  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle_.cpp  Rectangle_.h  Rhombus.cpp  Rhombus.h  RightTriangle.cpp  RightTriangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
Creating and linking libraries/Task 5 Class hierarchy lib_DLL CMake/Figures_lib/: CMakeLists.txt  EquilateralTriangle.h  Figure.h  IsoscelesTriangle.h  Parallelogram.cpp  Quadrangle.h  Rectangle_.cpp  Rectangle_.h  RightTriangle.h  Square.h  Triangle.h
Race simulator/: CMakeLists.txt  main.cpp
Race simulator/Vehicles_lib/: CMakeLists.txt  air_vehicles.cpp  air_vehicles.h  boots.cpp  boots.h  broom.cpp  broom.h  camel.cpp  camel.h  carpet.cpp  carpet.h  centaur.cpp  centaur.h  eagle.cpp  eagle.h  earth_vehicles.cpp  earth_vehicles.h  speed_camel.cpp  speed_camel.h  vehicles.cpp  vehicles.h
Task 1 Introduction to Visual Studio/: Task 1 Introduction to Visual Studio.sln
Курсовой проект «Парсер INI-файлов»/: main.cpp  to_read.ini  Курсовой проект «Парсер INI-файлов».sln  Курсовой проект «Парсер INI-файлов».vcxproj
Работа с PostgreSQL из C++/: CMakeLists.txt  main.cpp
(+281 files in other folders)
